--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
   <header class="header">
     <img src="./images/logo.svg" alt="логотип" class="header__logo">
   </header>
+  <main class="content">
+    <section class="profile">
+      <div class="profile__container">
+        <div class="profile__avatar"></div>
+        <div class="profile__info">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button type="button" class="profile__button-edit"></button>
+          <p class="profile__speciality">Исследователь океана</p>
+        </div>
+      </div>
+      <button type="button" class="profile__button-add"></button>
+    </section>
+  </main>
 </body>
 </html>
