Добавить блок gallery

--- a/index.html
+++ b/index.html
@@ -23,6 +23,52 @@
       </div>
       <button type="button" class="profile__button-add"></button>
     </section>
+    <section class="gallery" aria-label="Галерея">
+      <ul class="gallery__list">
+        <li class="gallery__list-item">
+          <img src="./images/Baykal.jpeg" alt="Байкал" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Байкал</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+        <li class="gallery__list-item">
+          <img src="./images/Elbrus.jpeg" alt="Эльбрус" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Эльбрус</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+        <li class="gallery__list-item">
+          <img src="./images/Kamchatka.jpeg" alt="Камчатка" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Камчатка</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+        <li class="gallery__list-item">
+          <img src="./images/Krasnaya Polyana.jpeg" alt="Красная Поляна" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Красная Поляна</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+        <li class="gallery__list-item">
+          <img src="./images/lastochkino gnezdo.jpeg" alt="Ласточкино гнездо" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Ласточкино гнездо</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+        <li class="gallery__list-item">
+          <img src="./images/Altay.jpeg" alt="Алтай" class="gallery__list-image">
+          <div class="gallery__container">
+            <h2 class="gallery__image-title">Алтай</h2>
+            <button type="button" class="gallery__like"></button>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
