--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
       </ul>
     </section>
   </main>
+  <footer class="footer">
+    <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
+  </footer>
 </body>
 </html>
