--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="./images/logo.svg" alt="логотип" class="header__logo">
   </header>
   <main class="content">
-    <section class="profile">
+    <section class="profile" aria-label="Профиль">
       <div class="profile__container">
         <div class="profile__avatar"></div>
         <div class="profile__info">
