Добавить блок popup

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
         </li>
       </ul>
     </section>
+    <section class="popup">
+      <div class="popup__container-form">
+        <button type="button" class="popup__close"></button>
+        <form action="#" method="post" name="form" class="popup__form">
+          <fieldset class="popup__contact-info">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input type="text" name="name" placeholder="Имя" value required class="popup__input">
+            <input type="text" name="profession" placeholder="Профессия" value required class="popup__input">
+            <button type="button" class="popup__save">Сохранить</button>
+          </fieldset>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
