--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </li>
       </ul>
     </section>
-    <section class="popup">
+    <section class="popup" aria-label="Модальное окно">
       <div class="popup__container-form">
         <button type="button" class="popup__close"></button>
         <form action="#" method="post" name="form" class="popup__form">
