--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           </div>
         </li>
         <li class="gallery__list-item">
-          <img src="./images/Krasnaya Polyana.jpeg" alt="Красная Поляна" class="gallery__list-image">
+          <img src="./images/KrasnayaPolyana.jpeg" alt="Красная Поляна" class="gallery__list-image">
           <div class="gallery__container">
             <h2 class="gallery__image-title">Красная Поляна</h2>
             <button type="button" class="gallery__like"></button>
           </div>
         </li>
         <li class="gallery__list-item">
-          <img src="./images/lastochkino gnezdo.jpeg" alt="Ласточкино гнездо" class="gallery__list-image">
+          <img src="./images/lastochkinoGnezdo.jpeg" alt="Ласточкино гнездо" class="gallery__list-image">
           <div class="gallery__container">
             <h2 class="gallery__image-title">Ласточкино гнездо</h2>
             <button type="button" class="gallery__like"></button>
@@ -75,9 +75,9 @@
         <form action="#" method="post" name="form" class="popup__form">
           <fieldset class="popup__contact-info">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" name="name" placeholder="Имя" value required class="popup__input">
-            <input type="text" name="profession" placeholder="Профессия" value required class="popup__input">
-            <button type="button" class="popup__save">Сохранить</button>
+            <input type="text" name="name" placeholder="Имя" value required class="popup__input popup__input-name">
+            <input type="text" name="profession" placeholder="Профессия" value required class="popup__input popup__input-profession">
+            <button type="submit" class="popup__save">Сохранить</button>
           </fieldset>
         </form>
       </div>
@@ -86,5 +86,6 @@
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
