--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mesto</title>
+  <title lang="en">Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
@@ -14,7 +14,7 @@
   <main class="content">
     <section class="profile" aria-label="Профиль">
       <div class="profile__container">
-        <div class="profile__avatar"></div>
+        <img src="./images/Avatar.svg" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button type="button" class="profile__button-edit"></button>
@@ -72,13 +72,11 @@
     <section class="popup" aria-label="Модальное окно">
       <div class="popup__container-form">
         <button type="button" class="popup__close"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
         <form action="#" method="post" name="form" class="popup__form">
-          <fieldset class="popup__contact-info">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" name="name" placeholder="Имя" value required class="popup__input popup__input-name">
-            <input type="text" name="profession" placeholder="Профессия" value required class="popup__input popup__input-profession">
-            <button type="submit" class="popup__save">Сохранить</button>
-          </fieldset>
+          <input type="text" name="name" placeholder="Имя" required class="popup__input popup__input_type_name">
+          <input type="text" name="profession" placeholder="Профессия" required class="popup__input popup__input_type_profession">
+          <button type="submit" class="popup__save">Сохранить</button>
         </form>
       </div>
     </section>
@@ -86,6 +84,6 @@
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
   </footer>
-  <script src="index.js"></script>
+  <script defer src="./scripts/index.js"></script>
 </body>
 </html>
