--- a/index.html
+++ b/index.html
@@ -25,48 +25,6 @@
     </section>
     <section class="gallery" aria-label="Галерея">
       <ul class="gallery__list">
-        <li class="gallery__list-item">
-          <img src="./images/Baykal.jpeg" alt="Байкал" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Байкал</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
-        <li class="gallery__list-item">
-          <img src="./images/Elbrus.jpeg" alt="Эльбрус" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Эльбрус</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
-        <li class="gallery__list-item">
-          <img src="./images/Kamchatka.jpeg" alt="Камчатка" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Камчатка</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
-        <li class="gallery__list-item">
-          <img src="./images/KrasnayaPolyana.jpeg" alt="Красная Поляна" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Красная Поляна</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
-        <li class="gallery__list-item">
-          <img src="./images/lastochkinoGnezdo.jpeg" alt="Ласточкино гнездо" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Ласточкино гнездо</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
-        <li class="gallery__list-item">
-          <img src="./images/Altay.jpeg" alt="Алтай" class="gallery__list-image">
-          <div class="gallery__container">
-            <h2 class="gallery__image-title">Алтай</h2>
-            <button type="button" class="gallery__like"></button>
-          </div>
-        </li>
       </ul>
     </section>
     <section class="popup" aria-label="Модальное окно">
@@ -84,6 +42,15 @@
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
   </footer>
+  <template id="gallery__list-item">
+    <li class="gallery__list-item">
+      <img class="gallery__list-image">
+      <div class="gallery__container">
+        <h2 class="gallery__image-title"></h2>
+        <button type="button" class="gallery__like"></button>
+      </div>
+    </li>
+  </template>
   <script defer src="./scripts/index.js"></script>
 </body>
 </html>
