feat: добавить возможность ставить лайки

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </footer>
   <template id="gallery__list-item">
     <li class="gallery__list-item">
+      <button type="button" class="gallery__trash"></button>
       <img class="gallery__list-image">
       <div class="gallery__container">
         <h2 class="gallery__image-title"></h2>
