feat: добавить попап с просмотром изображения

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         </form>
       </div>
     </section>
+    <section id="popup-image" class="popup popup_image" aria-label="Модальное окно">
+        <figure class="popup__figure">
+          <button id="button-close-image" type="button" class="popup__close"></button>
+          <img class="popup__image">
+          <figcaption class="popup__caption"></figcaption>
+        </figure>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
