--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="popup-image" class="popup popup_image" aria-label="Модальное окно">
         <figure class="popup__figure">
           <button id="button-close-image" type="button" class="popup__close"></button>
-          <img class="popup__image">
+          <img src="#" class="popup__image" alt="">
           <figcaption class="popup__caption"></figcaption>
         </figure>
     </section>
@@ -63,7 +63,7 @@
   <template id="gallery__list-item">
     <li class="gallery__list-item">
       <button type="button" class="gallery__trash"></button>
-      <img class="gallery__list-image">
+      <img src="#" class="gallery__list-image" alt="">
       <div class="gallery__container">
         <h2 class="gallery__image-title"></h2>
         <button type="button" class="gallery__like"></button>
