--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </ul>
     </section>
     <section id="popup-edit-profile" class="popup" aria-label="Модальное окно">
-      <div class="popup__container-form">
-        <button id="button-close-edit-profile" type="button" class="popup__close"></button>
+      <div class="popup__container popup__container_type_profile">
+        <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form action="#" method="post" name="form" class="popup__form">
           <input type="text" name="name" placeholder="Имя" required class="popup__input popup__input_type_name">
@@ -39,8 +39,8 @@
       </div>
     </section>
     <section id="popup-add-cards" class="popup" aria-label="Модальное окно">
-      <div class="popup__container-form">
-        <button id="button-close-add-card" type="button" class="popup__close"></button>
+      <div class="popup__container popup__container_type_cards">
+        <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
         <form action="#" method="post" name="form" class="popup__form">
           <input type="text" name="title" placeholder="Название" required class="popup__input popup__input_type_title">
@@ -49,12 +49,14 @@
         </form>
       </div>
     </section>
-    <section id="popup-image" class="popup popup_image" aria-label="Модальное окно">
+    <section id="popup-open-image" class="popup popup_image" aria-label="Модальное окно">
+      <div class="popup__container popup__container_type_image">
+        <button type="button" class="popup__close"></button>
         <figure class="popup__figure">
-          <button id="button-close-image" type="button" class="popup__close"></button>
           <img src="#" class="popup__image" alt="">
           <figcaption class="popup__caption"></figcaption>
         </figure>
+      </div>
     </section>
   </main>
   <footer class="footer">
