--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <ul class="gallery__list">
       </ul>
     </section>
-    <section id="popup-edit-profile" class="popup" aria-label="Модальное окно">
-      <div class="popup__container popup__container_type_profile">
+    <section class="popup popup_type_edit-profile" aria-label="Модальное окно">
+      <div class="popup__container popup__container_type_edit-profile">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form action="#" method="post" name="form" class="popup__form">
@@ -38,8 +38,8 @@
         </form>
       </div>
     </section>
-    <section id="popup-add-cards" class="popup" aria-label="Модальное окно">
-      <div class="popup__container popup__container_type_cards">
+    <section class="popup popup_type_add-cards" aria-label="Модальное окно">
+      <div class="popup__container popup__container_type_add-cards">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
         <form action="#" method="post" name="form" class="popup__form">
@@ -49,8 +49,8 @@
         </form>
       </div>
     </section>
-    <section id="popup-open-image" class="popup popup_image" aria-label="Модальное окно">
-      <div class="popup__container popup__container_type_image">
+    <section class="popup popup_type_show-image" aria-label="Модальное окно">
+      <div class="popup__container popup__container_type_show-image">
         <button type="button" class="popup__close"></button>
         <figure class="popup__figure">
           <img src="#" class="popup__image" alt="">
