--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       <div class="popup__container popup__container_type_edit-profile">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" method="post" name="form" class="popup__form">
-          <input type="text" name="name" placeholder="Имя" required class="popup__input popup__input_type_name">
-          <input type="text" name="profession" placeholder="Профессия" required class="popup__input popup__input_type_profession">
-          <button type="submit" class="popup__save">Сохранить</button>
+        <form action="#" method="post" name="form" class="popup__form" novalidate>
+          <input id="name-input" type="text" name="name" placeholder="Имя" required minlength="2" maxlength="40" class="popup__input popup__input_type_name">
+          <span class="popup__input-error name-input-error"></span>
+          <input id="profession-input" type="text" name="profession" placeholder="Профессия" required minlength="2" maxlength="200" class="popup__input popup__input_type_profession">
+          <span class="popup__input-error profession-input-error"></span>
+          <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
     </section>
@@ -42,10 +44,12 @@
       <div class="popup__container popup__container_type_add-cards">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form action="#" method="post" name="form" class="popup__form">
-          <input type="text" name="title" placeholder="Название" required class="popup__input popup__input_type_title">
-          <input type="text" name="link" placeholder="Ссылка на картинку" required class="popup__input popup__input_type_link">
-          <button type="submit" class="popup__save">Создать</button>
+        <form action="#" method="post" name="form" class="popup__form" novalidate>
+          <input id="title-input" type="text" name="title" placeholder="Название" required minlength="2" maxlength="30" class="popup__input popup__input_type_title">
+          <span class="popup__input-error title-input-error"></span>
+          <input id="link-input" type="url" name="link" placeholder="Ссылка на картинку" required class="popup__input popup__input_type_link">
+          <span class="popup__input-error link-input-error"></span>
+          <button type="submit" class="popup__button">Создать</button>
         </form>
       </div>
     </section>
@@ -73,5 +77,6 @@
     </li>
   </template>
   <script defer src="./scripts/index.js"></script>
+  <script defer src="./scripts/validate.js"></script>
 </body>
 </html>
