--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       </div>
     </li>
   </template>
-  <script defer src="./scripts/index.js"></script>
+  <script defer type="module" src="./scripts/index.js"></script>
+  <script defer type="module" src="./scripts/card.js"></script>
   <script defer src="./scripts/validate.js"></script>
 </body>
 </html>
