refactor: изменить название файла card.js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </li>
   </template>
   <script defer type="module" src="./scripts/index.js"></script>
-  <script defer type="module" src="./scripts/card.js"></script>
+  <script defer type="module" src="./scripts/Card.js"></script>
   <script defer src="./scripts/validate.js"></script>
 </body>
 </html>
