--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
   </template>
   <script defer type="module" src="./scripts/index.js"></script>
   <script defer type="module" src="./scripts/Card.js"></script>
-  <script defer src="./scripts/validate.js"></script>
+  <script defer type="module" src="./scripts/FormValidator.js"></script>
 </body>
 </html>
