--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title lang="en">Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
   <header class="header">
-    <img src="./images/logo.svg" alt="логотип" class="header__logo">
+    <img src="<%=require('./images/logo.svg')%>" alt="логотип" class="header__logo">
   </header>
   <main class="content">
     <section class="profile" aria-label="Профиль">
       <div class="profile__container">
-        <img src="./images/Avatar.svg" alt="аватар" class="profile__avatar">
+        <img src="<%=require('./images/Avatar.svg')%>" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button type="button" class="profile__button-edit"></button>
@@ -76,8 +75,5 @@
       </div>
     </li>
   </template>
-  <script defer type="module" src="./scripts/index.js"></script>
-  <script defer type="module" src="./scripts/Card.js"></script>
-  <script defer type="module" src="./scripts/FormValidator.js"></script>
 </body>
 </html>
