refactor: добавить класс popupWithForm, UserInfo

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
         <form action="#" method="post" name="form" class="popup__form" novalidate>
-          <input id="title-input" type="text" name="title" placeholder="Название" required minlength="2" maxlength="30" class="popup__input popup__input_type_title">
+          <input id="title-input" type="text" name="name" placeholder="Название" required minlength="2" maxlength="30" class="popup__input popup__input_type_title">
           <span class="popup__input-error title-input-error"></span>
           <input id="link-input" type="url" name="link" placeholder="Ссылка на картинку" required class="popup__input popup__input_type_link">
           <span class="popup__input-error link-input-error"></span>
@@ -68,7 +68,7 @@
   <template id="gallery__list-item">
     <li class="gallery__list-item">
       <button type="button" class="gallery__trash"></button>
-      <img src="#" class="gallery__list-image" alt="">
+      <img src="#" class="gallery__image" alt="">
       <div class="gallery__container">
         <h2 class="gallery__image-title"></h2>
         <button type="button" class="gallery__like"></button>
