--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
   <main class="content">
     <section class="profile" aria-label="Профиль">
       <div class="profile__container">
-        <img src="<%=require('./images/Avatar.svg')%>" alt="аватар" class="profile__avatar">
+        <div class="profile__avatar-container">
+          <img src="<%=require('./images/Avatar.svg')%>" alt="аватар" class="profile__avatar">
+        </div>
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button type="button" class="profile__button-edit"></button>
@@ -61,6 +63,26 @@
         </figure>
       </div>
     </section>
+    <section class="popup popup_type_warning" aria-label="Модальное окно">
+      <div class="popup__container popup__container_type_warning">
+        <button type="button" class="popup__close"></button>
+        <h2 class="popup__title popup__title_type_warning">Вы уверены?</h2>
+        <form action="#" method="post" name="form" class="popup__form" novalidate>
+          <button type="submit" class="popup__button">Да</button>
+        </form>
+      </div>
+    </section>
+    <section class="popup popup_type_edit-avatar">
+      <div class="popup__container popup__container_type_edit-avatar">
+        <button type="button" class="popup__close"></button>
+        <h2 class="popup__title popup__title_type_edit-avatar">Обновить аватар</h2>
+        <form action="#" method="post" name="form" class="popup__form" novalidate>
+          <input id="avatar-link-input" type="url" name="avatar-link" placeholder="Ссылка на аватар" required class="popup__input popup__input_type_avatar-link">
+          <span class="popup__input-error avatar-link-input-error"></span>
+          <button type="submit" class="popup__button">Сохранить</button>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__paragraph"> &copy; 2023 Mesto Russia</p>
@@ -71,7 +93,10 @@
       <img src="#" class="gallery__image" alt="">
       <div class="gallery__container">
         <h2 class="gallery__image-title"></h2>
-        <button type="button" class="gallery__like"></button>
+        <div class="gallery__like-container">
+          <button type="button" class="gallery__like"></button>
+          <p class="gallery__like-counter">1</p>
+        </div>
       </div>
     </li>
   </template>
