--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
     <section class="profile" aria-label="Профиль">
       <div class="profile__container">
         <div class="profile__avatar-container">
-          <img src="<%=require('./images/Avatar.svg')%>" alt="аватар" class="profile__avatar">
+          <img src="#" alt="аватар" class="profile__avatar">
         </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button type="button" class="profile__button-edit"></button>
-          <p class="profile__speciality">Исследователь океана</p>
+          <p class="profile__speciality"></p>
         </div>
       </div>
       <button type="button" class="profile__button-add"></button>
@@ -77,7 +77,7 @@
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title popup__title_type_edit-avatar">Обновить аватар</h2>
         <form action="#" method="post" name="form" class="popup__form" novalidate>
-          <input id="avatar-link-input" type="url" name="avatar-link" placeholder="Ссылка на аватар" required class="popup__input popup__input_type_avatar-link">
+          <input id="avatar-link-input" type="url" name="avatarLink" placeholder="Ссылка на аватар" required class="popup__input popup__input_type_avatar-link">
           <span class="popup__input-error avatar-link-input-error"></span>
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
@@ -95,7 +95,7 @@
         <h2 class="gallery__image-title"></h2>
         <div class="gallery__like-container">
           <button type="button" class="gallery__like"></button>
-          <p class="gallery__like-counter">1</p>
+          <p class="gallery__like-counter"></p>
         </div>
       </div>
     </li>
