--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <div class="popup__container popup__container_type_edit-profile">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" method="post" name="form" class="popup__form" novalidate>
+        <form action="#" method="post" name="profile-form" class="popup__form" novalidate>
           <input id="name-input" type="text" name="name" placeholder="Имя" required minlength="2" maxlength="40" class="popup__input popup__input_type_name">
           <span class="popup__input-error name-input-error"></span>
           <input id="profession-input" type="text" name="profession" placeholder="Профессия" required minlength="2" maxlength="200" class="popup__input popup__input_type_profession">
@@ -45,7 +45,7 @@
       <div class="popup__container popup__container_type_add-cards">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form action="#" method="post" name="form" class="popup__form" novalidate>
+        <form action="#" method="post" name="cards-form" class="popup__form" novalidate>
           <input id="title-input" type="text" name="name" placeholder="Название" required minlength="2" maxlength="30" class="popup__input popup__input_type_title">
           <span class="popup__input-error title-input-error"></span>
           <input id="link-input" type="url" name="link" placeholder="Ссылка на картинку" required class="popup__input popup__input_type_link">
@@ -67,7 +67,7 @@
       <div class="popup__container popup__container_type_warning">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title popup__title_type_warning">Вы уверены?</h2>
-        <form action="#" method="post" name="form" class="popup__form" novalidate>
+        <form action="#" method="post" name="warning-form" class="popup__form" novalidate>
           <button type="submit" class="popup__button">Да</button>
         </form>
       </div>
@@ -76,7 +76,7 @@
       <div class="popup__container popup__container_type_edit-avatar">
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title popup__title_type_edit-avatar">Обновить аватар</h2>
-        <form action="#" method="post" name="form" class="popup__form" novalidate>
+        <form action="#" method="post" name="avatar-form" class="popup__form" novalidate>
           <input id="avatar-link-input" type="url" name="avatarLink" placeholder="Ссылка на аватар" required class="popup__input popup__input_type_avatar-link">
           <span class="popup__input-error avatar-link-input-error"></span>
           <button type="submit" class="popup__button">Сохранить</button>
